[package]
name = "lazer"
version = "0.1.0"
edition = "2021"
authors = ["Aochi <aochi@fuquila.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tower = "0.4.13"
dotenv = "0.15.0"
serde_json = "1.0.91"
env_logger = "0.10.0"
axum = { version = "0.6.1", features = ["tower-log", "multipart"] }
tower-http =  { version = "0.3.5", features = ["trace"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.23"
